[package]
name = "unity-reference-server"
description = "An application and server for resolving references within Unity projects"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
repository = "https://github.com/cloone8/unity-reference-server"
keywords = ["unity", "reference", "server"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
jsonrpsee = { version = "0.24.7", features = ["server"] }
clap = { version = "4.5.27", features = ["derive"] }
log = { version = "0.4.25", features = ["release_max_level_debug", "std"] }
simplelog = { version = "0.12.2" }
serde = { version = "1.0.27", features = ["derive"] }
saphyr = { version = "0.0.3" }
saphyr-parser = { version = "0.0.3" }
regex = { version = "1.11.1" }
futures = { version = "0.3.31" }
chrono = { version = "0.4.39" }
serde_json = { version = "1.0.138" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "unwind"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
